2013-12-17  Fernando Ortiz <dev@nandub.info>

	* arc-init.sh: Specify the sed tool depending on the OS
	* build-all.sh: Add --sed-tool option.  Change sed to ${SED}, change
	uname -o to uname -s, -s is more portable than -o 
	* build-elf32.sh: Change sed to ${SED}
	* build-uclibc.sh: Change sed to ${SED}
	* rel-rpaths.sh: Change sed to ${SED}
	* run-uclibc-tests.sh: Change sed to ${SED}

2013-12-09  Anton Kolesov  <anton.kolesov@synopsys.com>

	* dejagnu/nsim-extra.exp: Switch to new nsimdrv application instead of
	obsolete nsim_gdb.

2013-12-06  Anton Kolesov  <anton.kolesov@synopsys.com>

	* run-tests.sh: Make error message more clear when invalid command
	line argument is specified.

2013-12-06  Anton Kolesov  <anton.kolesov@synopsys.com>

	* dejagnu/baseboards/arc-nsim.exp: Use bigger stack section.

2013-11-20  Anton Kolesov  <anton.kolesov@synopsys.com>

	* extras/opella-xd/arcem-cpu.xml: New file. Contains AUX registers
	description for the Ashling gdbserver for the Opella-XD probe.

2013-11-18  Anton Kolesov  <anton.kolesov@synopsys.com>

	* build-elf32.sh, build-uclibc.sh: If PDF docs build failed, suggest
	user to read Prerequisites section of documentation or use option
	--no-pdf.

2013-11-12  Anton Kolesov  <anton.kolesov@synopsys.com>

	* build-all.sh: Fix reference to section from readme, invalid name has
	been used. Also remove debug echo left from development.

2013-10-30  Anton Kolesov  <anton.kolesov@synopsys.com>

	* build-all.sh: Decide default value for auto-pull/checkout based on
	whether toolchain directory is a Git repository or not. Checkout and
	pull if it is a repository and do nothing if it is a directory from
	source tarball.

2013-10-30  Anton Kolesov  <anton.kolesov@synopsys.com>

	* build-all.sh: Give more detailed error message if Linux sources are
	mussing.
	* README.md: Add details on getting Linux sources.

2013-10-29  Anton Kolesov  <anton.kolesov@synopsys.com>

	* README.md: Add example of usage with Opella-XD debug probe.
